docs: update for JSON-e parser customization

--- a/docs/layouts/partials/sidebar.html
+++ b/docs/layouts/partials/sidebar.html
@@ -57,8 +57,8 @@
           <li class="{{ if eq $lastSeg "karaoke-eternal-server"}} active{{ end }}"><a href="{{ .Site.BaseURL }}docs/karaoke-eternal-server/">Karaoke Eternal Server</a>
             <ul id="karaoke-eternal-server-toc">
               <li><a href="{{ .Site.BaseURL }}docs/karaoke-eternal-server/#installation">Installation</a></li>
-              <li><a href="{{ .Site.BaseURL }}docs/karaoke-eternal-server/#media-files">Media Files</a>
-              </li>
+              <li><a href="{{ .Site.BaseURL }}docs/karaoke-eternal-server/#media-files">Media Files</a></li>
+              <li><a href="{{ .Site.BaseURL }}docs/karaoke-eternal-server/#metadata-parser">Metadata Parser</a></li>
               <li><a href="{{ .Site.BaseURL }}docs/karaoke-eternal-server/#cli--env">CLI &amp; ENV</a></li>
               <li><a href="{{ .Site.BaseURL }}docs/karaoke-eternal-server/#file-locations">File Locations</a></li>
             </ul>
